--- a/package.json
+++ b/package.json
@@ -7,8 +7,13 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^4.6.0",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
+    "select2": "^4.1.0-rc.0",
+    "stimulus": "^3.0.1",
     "turbolinks": "^5.2.0",
+    "typed.js": "^2.0.12",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
