--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.3",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "4.6",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "select2": "^4.1.0-rc.0",
